# zazzy-fern

./: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_fts.sql  003_files.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: calendar.rs  files.rs  folders.rs  mod.rs  notes.rs  search.rs  settings.rs  tasks.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: event.rs  file.rs  folder.rs  mod.rs  note.rs  search.rs  task.rs
src/components/layout/: AppShell.tsx  MainPanel.tsx  Sidebar.tsx
src/components/notes/: EditorToolbar.tsx  FolderSidebarPanel.tsx  FolderView.tsx  NoteEditor.tsx
src/components/tasks/: TaskListView.tsx
src/lib/: tauri.ts
src/pages/: Dashboard.tsx
src/store/: folderStore.ts  index.ts  uiStore.ts
src/types/: index.ts
